# prathidhwani-session

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: analytics.py  chatbot.py  writer.py
data/: .~lock.responses.xlsx#  audience_report.txt  responses.xlsx
static/: admin.html  admin.js  audience_report.txt  index.html  script.js  style.css
tests/: test_admin.py  test_analytics_agent.py  test_analytics_gemini.py  test_flow.py  test_user_panel.py
tutorial/: mcp_chatbot.py  mcp_chatbot_color.py  mcp_chatbot_custom_server.py  mcp_chatbot_memory.py  mcp_client.py  mcp_server.py  run_simple.py  test_chatbot.py
utils/: populate_data.py
